<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evendroid</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_startup">Startup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ナビゲーション -->
    <string name="navigation_title_search">Search</string>
    <string name="navigation_title_owner">Owner</string>
    <string name="navigation_title_participation">Participation</string>
    <string name="navigation_title_bookmark">Bookmark</string>

    <!-- メニュー -->
    <string name="action_example">Example action</string>
    <string name="action_search">@string/navigation_title_search</string>
    <string name="action_bookmark">@string/navigation_title_bookmark</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_schedule">Add Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- トースト -->
    <string name="toast_not_find_results">Did not find the event that search</string>
    <string name="toast_failed_to_search_event">Failed to search for events</string>
    <string name="toast_failed_to_fetch_event">Failed to fetch for event</string>
    <string name="toast_not_exist_events">Event to update does not exist</string>
    <string name="toast_not_exist_username">Please enter your user name from the settings</string>
    <string name="toast_successfull_added_bookmark">Successful bookmark</string>
    <string name="toast_failed_to_add_bookmark">Failed bookmark</string>
    <string name="toast_successfull_remove_bookmark">Successful remove the bookmark</string>
    <string name="toast_failed_to_remove_bookmark">Failed to remove the bookmark</string>
    <string name="toast_failed_to_connect_network">You can not connect to the Internet</string>
    <string name="toast_not_exist_participant">Dose not have any participant</string>

    <!-- ヘッダ -->
    <string name="event_search_list_header">No result</string>
    <string name="event_owner_list_empty_header">None event</string>
    <string name="event_owner_list_header">%1$d Events</string>
    <string name="event_participation_list_empty_header">@string/event_owner_list_empty_header</string>
    <string name="event_participation_list_header">@string/event_owner_list_header</string>
    <string name="event_bookmark_list_empty_header">None bookmarks</string>
    <string name="event_bookmark_list_header">%1$d Bookmarks</string>

    <!-- ダイアログ -->
    <string name="dialog_titile_remove_bookmark_event">Remove bookmark</string>
    <string name="dialog_content_remove_bookmark_event">Are you sure you want to delete the event that bookmark?</string>

    <!-- ヒント -->
    <string name="hint_search_query_keyword">Keyword</string>
    <string name="hint_input_account_name">ATND Account </string>

    <!-- イベント -->
    <string name="event_detail_no_participants">No participants</string>
    <string name="event_detail_participants">%1$d / %2$d</string>
    <string name="event_detail_section_summary">Summary</string>
    <string name="event_detail_section_users">Participants</string>
    <string name="event_detail_section_owner">Owner</string>
    <string name="event_detail_item_web_page">More detail</string>
    <string name="event_detail_item_owner_event">Owner events</string>

    <!-- スタートアップ -->
    <string name="startup_dialog_title_account">Account</string>
    <string name="startup_dialog_content_guide_account">The account can be changed from the settings</string>
    <string name="startup_dialog_content_warning_account">Do you not need to input an account? You can enter the account settings later.</string>
    <string name="startup_dialog_title_create_account">Create Account</string>
    <string name="startup_dialog_content_create_account">After you create the account from HP of ATND, enter the account</string>

    <!-- プレファレンス -->
    <string name="pref_header_event">Event</string>
    <string name="pref_header_contact">Contact</string>
    <string name="pref_header_about_app">About Evendroid</string>
    <string name="pref_category_event_general">General</string>
    <string name="pref_general_loading_title">Number of events to be loaded at one time</string>
    <string name="pref_general_loading_dialog_title">Event Count</string>
    <string name="pref_general_loading_summary">Load count : %1$s</string>
    <string name="pref_general_clear_bookmark_title">Clear bookmarks</string>
    <string name="pref_general_clear_bookmark_summary">Bookmark count : %1$d</string>
    <string name="pref_general_clear_bookmark_dialog_title">Clear bookmarks</string>
    <string name="pref_general_clear_bookmark_dialog_msg">Are you sure you want to clear all bookmarks?</string>
    <string name="pref_general_clear_suggest_title">Clear search history</string>
    <string name="pref_general_clear_suggest_dialog_title">Clear history</string>
    <string name="pref_general_clear_suggest_dialog_msg">Are you sure you want to clear all search history?</string>
    <string name="pref_category_event_atnd">ATND</string>
    <string name="pref_atnd_title">ATND UserName</string>
    <string name="pref_atnd_summary">%1$s</string>
    <string name="pref_atnd_dialog_title">ATND</string>
    <string name="pref_atnd_dialog_msg">Please enter a username</string>
    <string name="pref_category_contact_apps">Apps</string>
    <string name="pref_category_contact_sns">SNS</string>
    <string name="pref_contact_apps_title">Send the request</string>
    <string name="pref_contact_sns_title_github">GitHub</string>
    <string name="pref_contact_sns_summary_github">Soucecode</string>
    <string name="pref_contact_sns_title_twitter">Twitter</string>
    <string name="pref_contact_sns_summary_twitter">itadakit@droibit</string>
    <string name="pref_about_app_category">Application</string>
    <string name="pref_about_app_build_version_title">Build version</string>
    <string name="pref_about_app_change_log_title">What\'s new</string>
    <string name="pref_about_app_change_log_summary">Changes to the Application</string>
    <string name="pref_about_app_open_souce_license_title">Open source license</string>
    <string name="pref_about_app_share_title">Share the application</string>
    <!-- プレファレンスキー -->
    <string name="pref_key_laoding_count">laoding_count</string>
    <string name="pref_key_atnd_user_name">atndUser_name</string>
    <string name="pref_key_clear_bookmark">clear_bookmark</string>
    <string name="pref_key_clear_suggest">clear_suggest</string>
    <string name="pref_key_request_apps">request_apps</string>
    <string name="pref_key_contact_github">contact_gitHub</string>
    <string name="pref_key_contact_twitter">contact_twitter</string>
    <string name="pref_key_build_version">build_version</string>
    <string name="pref_key_change_log">whats_new</string>
    <string name="pref_key_open_souce_license">oss_license</string>
    <string name="pref_key_share_app">share_app</string>

    <!-- メール -->
    <string name="mail_address">kumagai.shinya@gmail.com</string>
    <string name="mail_subject_request_apps">Request of Evendroid</string>
    <string name="mail_share_title">Share Evendroid</string>
    <string name="mail_share_detail">Evendroid can be downloaded from the following URL. \n\n%1$s</string>

    <!-- Misc -->
    <string name="twitter_id">droibit</string>
    <string name="startup_create_account">Create ATND account</string>
    <string name="url_github_repository">https://github.com/droibit/Evendroid</string>

</resources>
