<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droibit.evendroid2.DetailActivity" >
    <item android:id="@+id/action_schedule"
        android:title="@string/action_schedule"
        android:icon="@drawable/ic_action_event"
        android:orderInCategory="100"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_bookmark"
        android:title="@string/action_bookmark"
        android:orderInCategory="300"
        android:checkable="true"
        android:checked="false"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="400"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="500"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>
