<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_default_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/theme_default_text_primary"
            android:textSize="@dimen/material_textsize_xlarge"
            android:layout_marginTop="@dimen/material_half_side_edge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/theme_default_text_primary"
            android:textColorHint="@color/theme_default_text_secondary"
            android:background="@drawable/edit_text_holo_light"
            android:textSize="@dimen/material_textsize_large"
            android:hint="@string/hint_input_account_name"
            android:focusable="true"
            android:minEms="10"/>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_half_side_edge"
            android:text="@android:string/ok"
            android:textSize="@dimen/material_textsize_large"
            android:textColor="@color/theme_default_text_primary"
            android:background="?android:attr/selectableItemBackground" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center|top">

        <Button
            android:id="@+id/button_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/material_half_side_edge"
            android:paddingRight="@dimen/material_half_side_edge"
            android:text="@string/startup_create_account"
            android:textSize="@dimen/material_textsize_medium"
            android:textColor="@color/theme_default_text_secondary"
            android:background="?android:attr/selectableItemBackground" />

    </LinearLayout>

</LinearLayout>